--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ h3 {
   gap: 13px;
   justify-content: center;
 }
-.thumb2{
+.thumb2, .coverArt{
   display: flex;
   flex-direction: column;
   padding: 45px;
@@ -318,10 +318,15 @@ h3 {
   height: 190px;
   transition: all 0.3s ease;
 }
+.coverArt img{
+  border-radius: 15px;
+  height: 250px;
+  transition: all 0.3s ease;
+}
 .thumb3 img:hover, .thumb2 img:hover{
    box-shadow: 1px 1px 8px #000000;
     background-color: #ccdee7;
-    transform: translateY(-2px);
+    transform: translateY(-4px);
 }
 .logo{
   display: none;
